Category: -Information, +Community (no better idea, last page in Information)

--- a/Glossary.mw
+++ b/Glossary.mw
@@ -37,4 +37,4 @@ Mobile Switching Centre. A major componenent of the GSM Network.
 
 Acronym for [http://en.wikipedia.org/wiki/Public_land_mobile_network Public Land Mobile Network] what your mobile phone almost certainly connects to.
 
-[[Category:Information]]
+[[Category:Community]]
