Category changes: -Community, +Wiki Editing

--- a/Wikitable.mw
+++ b/Wikitable.mw
@@ -14,4 +14,4 @@ border="1" cellpadding="4" cellspacing="0" class="toccolours" style="text-align:
 
 border="2" cellpadding="4" cellspacing="0" style="margin-top:1em; margin-bottom:1em; background:#f9f9f9; border:1px #aaa solid; border-collapse:collapse;"
 
-[[Category:Community]]
+[[Category:Wiki Editing]]
