--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -46,7 +46,7 @@ Follow this [http://support.microsoft.com/kb/306126 guide (Windows Users)]to sha
 
 To share your internet connection on a Linux host follow this [[USB_Networking|USB networking guide]].
 
-*If you are also behind a router you may have to change your LAN IP range in your router to avoid using 192.168.0.* as this is the same IP range as what your phone and ICS uses. (If you don't there will be an IP conflict)
+*If you are also behind a router you may have to change your LAN IP range in your router to avoid using 192.168.0.* as this is the same IP range as what your phone and ICS uses. (If you don't there will be an IP conflict) (see below for a workaround)
 
 After you install and run [[http://wiki.openmoko.org/wiki/Om2008.8#Download Om 2008.8 ]] for the first time you have to restart to get the USB working. Once you have done that you have to ssh into your phone (192.168.0.202) to edit your /etc/network/interfaces so you can access the internet through USB to install software and updates. 
 
@@ -63,6 +63,17 @@ Edit the USB section to look like this:
  	up echo nameserver 208.67.222.222 > /etc/resolv.conf 
  	up echo nameserver 208.67.220.220 >> /etc/resolv.conf 
  	#up echo nameserver 192.168.0.200 > /etc/resolv.conf
+
+If you have a 192.168.0.* network, with .200 to .203 ip not used, you can do the following on FR:
+
+ auto usb0
+ iface usb0 inet static
+ 	address 192.168.0.202
+ 	netmask 255.255.255.252
+ 	network 192.168.0.200
+ 	gateway 192.168.0.201
+
+and set your host ip to 201. Don't forget to modify routing and check [[USB_Networking|USB networking guide]] for a DNS MASQ using 192.168.0.201 as FR DNS.
 
 ===== Wireless =====
 
