/* Connecting your FR through USB to an internet-connected computer */

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -73,7 +73,7 @@ If you have a 192.168.0.* network, with .200 to .203 ip not used, you can do the
  	network 192.168.0.200
  	gateway 192.168.0.201
 
-and set your host ip to 201. Don't forget to modify routing and check [[USB_Networking|USB networking guide]] for a DNS MASQ using 192.168.0.201 as FR DNS.
+and set your host ip to 201. Don't forget to modify routing and check [[USB_Networking|USB networking guide]] for a DNS MASQ using 192.168.0.201 as FR DNS. --[[User:Femto|Femto]] 00:34, 1 September 2008 (UTC)
 
 ===== Wireless =====
 
