--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -82,12 +82,12 @@ See also: http://en.wikipedia.org/wiki/Wikipedia:Navigation_templates
 
 == List pages ==
 
-List pages are manually maintained pages, which link to a certain set of articles. Their purpose is similar to category pages' automatic article listing, but they can provide advantages above the automatic lists, like sections, better formatting, sorting.
+List pages are manually maintained lists of links to a certain set of articles. Their purpose is similar to category pages' automatic article listing, but they can provide advantages above the automatic lists, like sections, better formatting, sorting, etc.
 
-An index page is only justified if it gives value added to the reader by
+A list page is only justified if it gives value added to the reader by
 * Making a thematic selection of quality links within and/or outside the Wiki
 * Providing a well thought out logical organization that makes it easy to  find information
-* Offering a good formatting consistent with the above goal Indexes should be not be painful to maintain. Comprehensive lists of pages cannot be kept up to date and are better made automatically using categories.
+* Offering a good formatting consistent with the above goal. List pages should be not be painful to maintain. Comprehensive lists of pages cannot be kept up to date and are better made automatically using categories.
 
 You are welcome to create and improve list pages which match these recommendations.
 
