added "distribution customization"

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -1,6 +1,6 @@
 {{Languages|FAQ}}
 
-{{note|Substantial work in progress!!!!}}
+{{Editing|MichaelShiloh|Aug_31_2008|combining other FAQ lists and updating}}
 
 ==Introduction== 
 
@@ -176,6 +176,40 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 :<tt>gtk-icon-theme-name="openmoko-standard"</tt>
 
 :You shouldn't even need to restart the device, although you will need to restart any GTK-based programs.
+
+== Distribution Customization ==
+
+=== Compilation & packaging ===
+==== What is the 'overlay' approach to bitbake development? ====
+:You can create a local overlay for the bitbake build chain and develop in the overlay as described in [[Application_Development_Crash_Course| Application Development Crash Course]].
+
+==== Which .bb files are related with the Openmoko? ====
+==== Are there any configuration files for Openmoko? ====
+==== How can I port an application written with autotools to Openmoko? ====
+After you source the [[Toolchain|Openmoko toolchain]] variables, the Openmoko processor compiler becomes the default compiler. You can compile any GNU - like project just typing ''./configure --host i686'' and then ''make'' - it will produce libraries and executables as expected. Just these executables will not run on your i686 host - they will run on Openmoko ARM processor. Use scp to upload the executables to your phone.
+
+==== How can I add an application written with autotools to the openmoko tree? ====
+
+==== How can I make changes in the openmoko applications? ====
+==== How can I submit my changes? ====
+==== How can I use the mokomakefile in the development process? How? ====
+
+:Yes, [[MokoMakefile]] can be used in the development process.  See [[MokoMakefile#Developing_with_MokoMakefile| Developing with MokoMakefile]].
+
+==== What's the way to include/exclude a newly added package to/from the final rootfs? ====
+==== Where do the final ipk & binary files reside? ====
+:ipk files are in 
+ ./build/tmp/deploy/glibc/ipk/
+:binary images are in
+ ./build/tmp/deploy/glibc/images/fic-gta01/
+
+==== How can I add an application to the applications list? ====
+==== How can I assign an image to my new application to be seen in the applications list? ====
+The Openmoko project tree contains the folder 'data' where you can put any 128*128 icon. You need to mention the icon in two places in this folder: 
+* Makefile.am must contain the line dist_appicon_DATA = <icon_name>.png
+* The <application_name>.desktop file that must be in this folder should contain the Icon=<icon_name> (without file type).
+
+
 
 ==Software==
 
@@ -476,5 +510,6 @@ A: the answer for the display used in GTA01 and GTA02 is '2'
 =Historical=
 The Neo1973 was last available in Febuary 2008. 
 
+[[Category:Application Developer]]
 [[Category:Basic End User]]
 [[Category:FAQ]]
