--- a/USB.mw
+++ b/USB.mw
@@ -1,22 +1,1 @@
-USB is the Universal Serial Bus, the standard wired connection between computers and accessories. 
-
-In Openmoko and the [[Neo1973]], the following USB techniques are working, or are currently being implemented:
-
-* [[USB Product IDs]]
-* [[USB DFU]] firmware uploads during [[u-boot]]
-* [[USB CDC ACM]] serial terminal for use during [[u-boot]]
-* [[USB Networking]] when booted to Linux
-* [[Battery Charger]]
-* [[USB host]]
-* [[Specialized USB cables]]
-
-Both the Neo 1973 and the Neo FreeRunner have a standard 5-pin mini-USB type-B (slave) socket and ship with a cable to connect it to a host computer. The Neo FreeRunner additionally ships with a charger that connects via this port.
-
-== See also ==
-
-* [[Bluetooth]] for the wireless standard
-
-<span id="bottom"></span> 
-{{Languages|USB}}
-
-[[Category:Hardware]]
+#REDIRECT [[Category:USB]]
