*Empty MediaWiki Message*

--- a/Video_Player.mw
+++ b/Video_Player.mw
@@ -13,6 +13,14 @@ It can be installed with the following command:
 === Using the Glamo XV acceleration ===
 TBD, refer to: http://unadventure.wordpress.com/2008/06/08/accelerating-in-my-pocket/
 
+=== Controlling MPlayer from the Touchscreen ===
+Create a file in /home/root/.mplayer/input.conf with this content:
+ # Freerunner Optimizations
+ MOUSE_BTN0 vo_fullscreen
+ MOUSE_BTN0_DBL q
+Now, you can toggle the fullscreen by tapping the screen and exit from mplayer by touble-tapping the LCD.
+Accelerometers or hardware buttons could help more.
+
 === Playback helper script ===
 
 Create a script named 'vidplay' in your home directory with the following commands:
