*Empty MediaWiki Message*

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -1,75 +1,56 @@
 {{Languages|FAQ}}
 
-{{Editing|MichaelShiloh|Aug_31_2008|combining other FAQ lists and updating}}
-
 ==Introduction== 
 
-=== Q: What is Openmoko? What is the Neo 1973? What is the Neo FreeRunner? ===
-A: Openmoko is a software platform and the world's first completely open mobile phone software stack.  It is based on Linux and  allows users and enthusiasts great freedom to customise their phone.
-* The [[Neo 1973]] is the first fully supported Openmoko phone. 
-* The FIC [[Neo FreeRunner]] is the second Openmoko phone and is now available for sale!
+=== Q: What is Openmoko?  ===
+A: Openmoko is two things:
 
-=== Q: I'm a ____ expert, can I join/help Openmoko? ===
+Openmoko is a Linux distribution designed for open mobile computing platforms, such as, but not limited to, cellphones.
 
-We would love to hear from you.
+Openmoko is the company behind the Openmoko Linux distribution. Openmoko also manufactures mobile computing platforms, such as the Neo FreeRunner.
 
-* If you are interested in joining Openmoko as a software developer, please visit http://www.openmoko.com/contact.html and send us an e-mail.  
-* Or register some your project at http://projects.openmoko.org/
+=== Q: What is the [[Neo FreeRunner]]? === 
+A: The [[Neo FreeRunner]] is an open celllphone designed for the Openmoko Linux distribution. By open we mean that (a) all chips have been chosen to allow their drivers to be completely open sourced and (b) the schematics and the plastic (CAD) files are available as well.
 
-=== Q: When and where can I buy a [[Neo 1973]]? ===
+=== Q: I'm a programmer. How do I join the Openmoko project? ===
 
-A: The Openmoko Neo 1973 is now sold out (11 Feb 2008). You should get the better [[Neo FreeRunner]] instead!
+A: Join one or more of the mailing lists. A great place to start is the community list.
 
-=== Q: Where can I buy a [[Neo FreeRunner]]? ===
+Browse the wiki, and help improve it.
 
-A: You can buy a Neo FreeRunner at [http://www.openmoko.com/ openmoko.com]. See [[Getting Openmoko]] for more information on buying the Neo FreeRunner.
+Start or join an [[http://projects.openmoko.org/ Openmoko project]]
 
-=== Q: What are the new features that the Neo FreeRunner has? ===
+=== Q: I'm not a programmer, but I have other skills. Can I join/help Openmoko? ===
 
-It retains many good features from the Neo 1973 such as the very high resolution touch screen and integrated GPS unit.
+A: Absolutely. If your a visual artist, you can help us with icons and other visuals. Musicians can help contribute ringtones and other sounds. Marketing? Sales? Information visualization? Join the community mailing lists, introduce yourself, and you'll soon find a place to put your skills to good use.
 
-It adds the following features
-* WiFi - 802.11 b/g - for high speed internet
-* Faster processor operating at 400Mhz (up from 266Mhz) - for faster operation
-* * SMedia Glamo3362 Graphics Accelerator - for improved graphical performance
-* 2 3D Accelerometers - the phone applications will know which way the phone is oriented
-* 256MB Flash - larger memory to run bigger applications
-* LED's illuminating the 2 external buttons on the phone
+=== Q: I'd like to develop a product (software application, custom hardware) based on Openmoko and/or the Neo FreeRunner. How do I get started? ===
+
+A:  Send mail to michael@openmoko.org
+
+=== Q: Where can I buy the [[Neo FreeRunner]]? ===
+
+A: www.openmoko.com. We sell both directly and through a growing list of distributors.
 
 === Q: How much? === 
 
-A: If you buy directly from the Openmoko webshop you will pay $399 for the Neo FreeRunner, $99 for the debug board on [http://www.openmoko.com/ www.openmoko.com].
+A: If you buy directly from the Openmoko webshop you will pay USD $399 for the [[Neo FreeRunner]], USD $99 for the debug board. You can also purchase boxes of 10 FreeRunners at a price of USD $369 each. If you don't have a need for 10 units, you can join an existing or form a new group at [[Group_Sales]]. 
 
-=== Q: What can I do with the Neo 1973? ===
+=== Q: What are the features of the Neo FreeRunner? ===
 
-A: For long answer see [[Developer preview]]
-
-A: The Neo1973 is a Phase 1 phone and aimed at software developers only. It is not suitable for end users, it will have basic functionality as a touchscreen phone. Little else will work, software development will continue till mass market release.    Here are one developer's thoughts about the possibilities [http://blog.syntaxpolice.org/isaac/technology/linuxPhones.html]
-
-Those interested should:
-
-* Know that there will be a device with faster cpu, gsm system etc in the spring of 2008.
-* Have fun hacking devices.
-* Be able to find their way through prototype software and hardware without much documentation.
-* Share the dream of a device powered by free software.
-* Not expect a consumer-level device.
-* Come up with new ideas for exploring the age of mobile computing.
-* Have $300.
-
-Ideally they also:
-
-* Can spot bugs and submit patches.
-* Love to cooperate with a community improving the software.
+A: Visit [[Neo FreeRunner]]
 
 === Q: What can I do with the Neo FreeRunner? ===
 
-A: The Neo FreeRunner is the first phase 2 (mass release) phone from the Openmoko project and is designed for everyday use by end users and continued software development and improvements by the Openmoko team and the Openmoko community.
+A: The Neo FreeRunner is designed for everyday use by end users and for continued software development and improvements by the Openmoko team and the Openmoko community.
+
+The Openmoko software is not yet ready for everyday use.
 
 A: The question is almost what can you NOT do with this phone - eventually there will be a huge range of free software applications allowing both end users and developers to get much more out of this phone than a standard "locked" mobile phone using features like the integrated GPS, bluetooth, wifi and accelerometers.
 
 === Q: Do I need the debug board? === 
 
-With a Neo 1973 or a Neo FreeRunner and NO debug board you can do:
+With the Neo FreeRunner and NO debug board you can do:
 * Kernel development
 * Application development
 * Update u-boot (equivalent to PC BIOS). Neo 1973 users should only use a tested image to avoid the possibility of bricking the Neo 1973. Neo FreeRunner users do not have this concern, as a bad u-boot can always be updated using the failsafe u-boot in NOR flash
@@ -87,26 +68,11 @@ To emphasize, the debug board is '''not''' required in order to develop applicat
 
 === Q: I have a shipping related question === 
 
-For Neo1973
-* See [[SH1_FAQ|Shipment 1 FAQ]].
-
-For FreeRunner
-* See [http://www.openmoko.com/ openmoko.com]
-
-=== Q: What does the [[Neo 1973]] look like? ===
-
-* See the original launch [[Artwork|artwork]]
-* Collected images from google [[http://images.google.co.uk/images?q=neo+1973&ie=UTF-8&oe=utf-8&rls=com.ubuntu:en-GB:official&client=firefox-a&um=1&sa=N&tab=wi]]
-
-=== Q: What does the [[Neo FreeRunner]] look like? ===
-
-* From the outside, almost exactly the same as the Neo 1973. The case is all black, and it says "Neo FreeRunner" on the front.
+A: Visit [http://www.openmoko.com/ openmoko.com]
 
 === Q: What else do I need to know? ===
 
-* Both Neo 1973 and Neo FreeRunner are tri-band GSM phones.   
-* The Neo FreeRunner is as an 850/1800/1900MHz version for North America and an 900/1800/1900MHz version for the rest of the world.      
-* The Neo 1973 is only available as an 900/1800/1900Mhz version only and may not work well in some rural parts of North America.
+* The Neo FreeRunner is a tri-band GSM phone. It is available in an 850/1800/1900MHz version for North America and a 900/1800/1900MHz version for the rest of the world.      
 
 === Q: What are the benefits of an "open" phone over a "closed" phone ===
 
