--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -611,4 +611,4 @@ The kernel exports the system_rev variable in /proc/cpuinfo as "Revision :" line
 **NCC certification number: CCAF08DG0080T0 
 **[http://people.openmoko.org/tony_tu/GTA02/certificate/NCC NCC report and certificate]
 
-[[Category:GTA02 Hardware]]
+[[Category:Neo FreeRunner Hardware]]
