*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -325,6 +325,7 @@ __NOTOC__
 *[[Boot from sd card]]
 *[[Charging battery directly]]
 ====Software Documentation====
+*[[Neo FreeRunner GPS Software Fix Test Report]]
 *[[Keyboard Debate]]
 *[[Games]]
 *[[Biking]]
