--- a/Openmoko_Local_Groups.mw
+++ b/Openmoko_Local_Groups.mw
@@ -135,7 +135,8 @@ Such as with [[Openmoko_Local_Groups:_Singapore | Singapore]] or [[Openmoko_Loca
 ** [[Openmoko_Local_Groups: Karaganda|Karaganda]]
 * China
 ** [[Openmoko_Local_Groups: China|China]]
-
+* Taiwan
+** [[Openmoko_Local_Groups: Taiwan|Taiwan]]
 
 == Europe ==
 
