*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -471,13 +471,11 @@ __NOTOC__
 *[[Carriers/ATT]]
 *[[Carriers/Rogers]]
 *[[Interested in second hand neo]]
-*[[P1 Buying Interest List]]
-*[[Buying Interest List]]
+
 *[[P1 Owners]]
 *[[Shop:Speedevil]]
 ===Shipment===
 *[[Shipping Notes]]
-*[[Where is my FreeRunner?]]
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left| 
 ====GroupSales====
 *[[GroupSales]]
@@ -485,6 +483,7 @@ __NOTOC__
 *[[IberiaGroupSale]]
 *[[GroupSales/Torino]]
 *[[Group Sales Australia]]
+*[[SWAG]]
 ===Provider===
 *[[Neo1973 compatible cellphone providers]]
 |}
