--- a/SWAG.mw
+++ b/SWAG.mw
@@ -1,7 +1,7 @@
 <big>Locations to purchase openmoko SWAG</big><br>
-*[[http://www.spreadshirt.net/shop.php?sid=211795 SpreadShirts Shop Europe]] - This is the openmoko shop at spreadshirts (Thank You Daniel!)
-*[[http://www.spreadshirt.com/shop.php?sid=128333 SpreadShirts Shop USA]]
-<small>[[http://lists.openmoko.org/pipermail/community/2007-February/003160.html mailing list reference]]</small>
+*[http://www.spreadshirt.net/shop.php?sid=211795 SpreadShirts Shop Europe] - This is the openmoko shop at spreadshirts (Thank You Daniel!)
+*[http://www.spreadshirt.com/shop.php?sid=128333 SpreadShirts Shop USA]
+<small>[http://lists.openmoko.org/pipermail/community/2007-February/003160.html mailing list reference]</small>
 
 <span id="bottom"></span>
 {{Languages|SWAG}}
