--- a/Illume.mw
+++ b/Illume.mw
@@ -43,7 +43,7 @@ Illume's own virtual keyboard and protocol and vkbd setup.
 
 =Configuration=
 
-How to configure illume via ist own config dialog
+How to configure illume via its own config dialog
 
 =Dbus=
 
