--- a/U-Boot%2Fzh_tw.mw
+++ b/U-Boot%2Fzh_tw.mw
@@ -8,7 +8,7 @@
 
 
 == Phase0 快速啟動==
-* 請確認你的電話是目前是裝好電池，並且USB接線至少移開30秒以上。
+* 請確認你的手機是已經裝好電池，並且將USB接線移開至少30秒以上。
 * 利用USB接線，將Neo (並不是偵錯板) 連接到Linux主機。
 * 在啟動電源時，按住AUX按鈕以存取選單。
 * 將控制台設定為USB。
