--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -73,7 +73,8 @@ Status 6/10
 confirmation: From Pulster.eu: ''Our sales price is 299 EUR + shipping 15 EUR in Europe = 314 EUR. The idea of "open" is ours. So check our price calculation: if you order the FreeRunner from Taiwan, it's 399 USD + 100 USD shipping + c. 90 USD "import taxes" inside Europe. Total 589 USD = c.380 EUR. So it will be cheaper and we Europeans have 2 years of warranty when buying from Pulster, instead of a 14 days(?) for imported goods.''
 
  Cancelled for the above reason
- (and not 10 people reached) * npettiaux
+ (and not 10 people reached) 
+ * npettiaux
  [http://wiki.openmoko.org/wiki/Special:Emailuser/Npettiaux Contact me here]
 
 Status 30/07/2008 : 6/10
