/* Neo1973 Hardware */ Removed individual "does it have [hardware component]" questions.

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -304,30 +304,9 @@ A: Very probably. MSN is closed source and will only run where Microsoft wants y
 
 ==Neo1973 Hardware== 
 
-=== Q: Is there description of [[:Category:Neo1973 Hardware | Neo1973 Hardware]] ? ===
+=== Q: What are the hardware specifications of Neo 1973 ? ===
 
 A: See page [[Neo1973_Hardware]] and category [[:Category:Neo1973 Hardware | Neo1973 Hardware]] and [[Disassembling Neo1973]]
-
-=== Q: Does it have a camera? ===
-
-A: No, see [[:Category:Neo1973 Hardware | Neo1973]] for details on what it does include (and [[Wish List - Hardware]] for what some want in the future.) See also [[FAQ#USB]].
-
-=== Q: Does it have Wifi? ===
-
-A:The current model [[FreeRunner]] does have wifi. The older model, [[Neo1973]], does not have WiFi. There was no suitable Wifi device available when it was designed. See also [[FAQ#USB]].
-
-=== Q: Does it have bluetooth? ===
-
-A: Yes! Bluetooth 2.0.
-
-=== Q: Does it come with a stylus? ===
-
-A: Yes, but there's no holder for it on the phone.
-
-=== Q: Where are the buttons? ===
-
-[[Neo1973 Power Button|The power button]] is a small circular button, just next to the USB connector. 
-[[Neo1973 AUX Button|The Auxiliary button]] is a rectangular button on the top left of the edge of the phone. (on black phones it looks just like an IRDA port).
 
 === Q: How do I input text? ===
 
@@ -390,10 +369,6 @@ A: The Neo will have mini-USB-B, and will be able to function as either a host o
 an AB socket, but also electrical and software components which cannot be provide by the S3C2410.
 
 You will need a special Mini-B to regular-B cable (note that this won't actually comply with the USB standard:  a compliant cable has to have an A or Mini-A plug on one end, and B or Mini-B on the other).
-
-=== Q: Are there any LEDs on the Neo 1973? ===
-
-A: The [[Neo1973]] P1/P2 will have no LEDs besides the screen backlight.
 
 === Q: Will a JTAG port be made available? ===
 
