--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1068,11 +1068,13 @@ Status 1/10
 
 == Ireland ==
 === Dublin ===
-We are now at <s>12</s> 10 people and will be closing the order soon. If you want to join in add your name here and on the blog asap.
+We have sent our order to Pulster two weeks ago. We are still waiting on the phones but hopefully they will arrive this week (01/09) - :-/
+
+<s>We are now at 10 people and will be closing the order soon. If you want to join in add your name here and on the blog asap.
 
 Because [http://pulster.de Pulster] are offering the units at €299 apiece with a 2 year warranty and free shipping (without the freebies though) we are going to order from them and not direct from Taiwan.
 
-To register your interest for the Dublin shipment please post a comment on this [http://patrickoconnor.ie/blog/2008/07/01/openmoko-freerunner-limited-release/ blog post] and enter your details below.
+To register your interest for the Dublin shipment please post a comment on this [http://patrickoconnor.ie/blog/2008/07/01/openmoko-freerunner-limited-release/ blog post] and enter your details below.</s>
 
 * [http://wiki.openmoko.org/wiki/Special:Emailuser/patchrick Patchrick]
 * Karl O'Dwyer [http://wiki.openmoko.org/wiki/Special:Emailuser/Karl.odwyer Contact Me Here]
@@ -1089,6 +1091,7 @@ To register your interest for the Dublin shipment please post a comment on this 
 
 ==== Still open? ====
 Has this been closed yet? I just discovered it now and myself and a friend are interested? [[User:Ebel|Ebel]] 11:57, 22 August 2008 (UTC)
+-- Sorry, closed the order 2 weeks ago - [[User:Patchrick|Patchrick]]
 
 == Israel==
 Status : 6/10
