--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1091,7 +1091,8 @@ To register your interest for the Dublin shipment please post a comment on this 
 
 ==== Still open? ====
 Has this been closed yet? I just discovered it now and myself and a friend are interested? [[User:Ebel|Ebel]] 11:57, 22 August 2008 (UTC)
--- Sorry, closed the order 2 weeks ago - [[User:Patchrick|Patchrick]]
+
+Sorry, closed the order 2 weeks ago - [[User:Patchrick|Patchrick]]
 
 == Israel==
 Status : 6/10
