--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -24,6 +24,13 @@ for:
 
 ''make setup'' will download FSO, bitbake and SHR in the ''shr'' directory (SHR root directory from now on).
 
+By default, this will build the image for OM-GTA02. If you want to build the image for OM-GTA01:
+
+ $ cd shr-unstable
+ $ make setup-machine-om-gta01
+
+you can change it back to OM-GTA02 with ''make setup-machine-om-gta02''.
+
 === Set up your local.conf ===
 
 Before ''make image'', you might want to update ''conf/local.conf'' (under ''shr-unstable'' in the top directory) to speed up the building process with:
