--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -5,7 +5,7 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 === Before beginning ===
 
-* Download the FSO/SHR ''Makefile'' and ''common'' directory from [http://shr.bearstech.com/ Bearstech] (see README for details). You can use this simple [http://hacks-galore.org/aleix/files/scripts/get-shr.sh script] (''wget'' needed, edit it to fulfill your needs), type:
+* Download the FSO/SHR ''Makefile'' and ''common'' directory from [http://shr.bearstech.com/ Bearstech] (see README for details). In the future, the necessary files will be automatically downloaded by the ''Makefile'', by now, you can use this simple [http://hacks-galore.org/aleix/files/scripts/get-shr.sh script] to download all files (including the ''Makefile''. ''wget'' is required, edit it to fulfill your needs), type:
 
  $ . get-shr.sh
 
