--- a/Main_Page%2Ffi.mw
+++ b/Main_Page%2Ffi.mw
@@ -1,8 +1,8 @@
 {{Languages|Main Page}}
 __NOTOC__
-__NOEDITSECTION__ [[Image:FreeRunner02.gif|thumb|150px|right|Neo FreeRunners]]
+__NOEDITSECTION__ [[Image:Freerunner02.gif|thumb|150px|right|Neo FreeRunners]]
 
-<div style="padding: 2.5ex; text-align: center; font: bold x-large sans">'''Openmoko™ - Avoin. Mobiili. Vapaa.'''</div>
+<div style="padding: 2.5ex; text-align: center; font: bold x-large sans">Openmoko™ - Avoin. Mobiili. Vapaa.</div>
 
 
 ==<font color=75d806>Johdanto Openmokoon</font>==
