--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -3,7 +3,7 @@
 == Overview ==
 The [[Stable Hybrid Release]] (SHR) is intended to be a combination of the [[OpenmokoFramework|FSO]], some of the [[Openmoko2007.2]] GTK software, and the [[ASU_Feature_Plan|ASU]] that provides all of the functionality of the 2007.2 software, but with the stability of the FSO and the new GUI toolkits provided by the ASU.  It will probably be based on an ASU build, with the FSO software and GTK end-user apps added.
 
-(We're not married to the idea of using the GTK apps, but they already exist and are more-or-less debugged at least on the UI side.  If someone knows of a more stable and/or usable app that's appropriate for the OM, let us know by dropping a comment on the Talk tab of this page.)
+(We're not married to the idea of using the GTK apps, but they already exist and are more-or-less debugged at least on the UI side.  If someone knows of a more stable and/or usable app that's appropriate for the OM, let us know by dropping a comment on the ''discussion'' tab of this page.)
 
 Follow the project here: [http://projects.openmoko.org/projects/shr SHR Project Homepage]
 
