*Empty MediaWiki Message*

--- a/Main_Page%2Fes.mw
+++ b/Main_Page%2Fes.mw
@@ -1,5 +1,5 @@
 __NOTOC__
-__NOEDITSECTION__ [[Image:FreeRunner02.gif|thumb|150px|right|Neo FreeRunners]]
+__NOEDITSECTION__ [[Image:Freerunner02.gif|thumb|150px|right|Neo FreeRunners]]
 
 <div style="padding: 2.5ex; text-align: center; font: bold x-large sans">Openmoko™ - Abierto. Móvil. Libre.</div>
 Openmoko es un proyecto de [http://es.wikipedia.org/wiki/Open_source Código Abierto] para crear el primer sistema operativo libre para teléfonos móviles a nivel mundial. Openmoko actuamente esta vendiendo el teléfono [[Neo FreeRunner/es|Neo FreeRunner]] a usuarios avanzados con conocimientos técnicos y empezará la venta al público en general tan pronto com el software este lo suficientemente desarrollado.
@@ -47,15 +47,12 @@ El sistema operativo Openmoko, que incluye un servidor X completo, permite a los
 <td>
 ===<font color=white>Empezando</font>===
 * [[Getting Started with your Neo FreeRunner/es | Guía Empezando con el Neo FreeRunner]]
-* [[FAQ#Getting_Started_with_your_Neo_FreeRunner]]
+* [[Applications|Aplicaciones]]
 
 ===<font color=white>Software</font>===
-* [[Distributions|Distribuciones Openmoko]]
-** [[Om_2007.2/es|Distribución 2007.2]]
-** [[Om_2008.8/es|Distribución 2008.8]]
-** [[OpenmokoFramework|Distribución FSO]]
-** [[Qtopia_on_FreeRunner|Distribución Qtopia]]
-** [[Debian|Distribución Debian ]]
+* [[Distributions|Comparativa de Características]]
+** [[Om_2008.8/es|Om 2008.8 (ASU en desarollo)]]-[[Om_2007.2/es|Om 2007.2 (antigua estable)]]
+** [[OpenmokoFramework|FSO]]-[[Qtopia_on_FreeRunner|Qtopia]]-[[Debian|Debian ]]
 
 ===<font color=white>Comunidad Openmoko</font>===
 * [[Discussion_Forums| Fora ]]
