*Empty MediaWiki Message*

--- a/Neo1973_compatible_cellphone_providers.mw
+++ b/Neo1973_compatible_cellphone_providers.mw
@@ -87,6 +87,7 @@ All:
 * [http://www.vodafone.de/ Vodafone]
 * [http://www.o2online.de/ o2]
 * [http://www.eplus.de/ E-Plus]
+* [http://www.dslfragen.com/arcor Arcor]
 * [http://www.t-mobile.de/ T-mobile]
 == India ==
 All GSM:
