/* Known Issues */ Add suspend bug

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -56,6 +56,10 @@ To install the Om2008.8 stable distribution on the Neo FreeRunner, download the 
 
 This is only a subset, and some of the bits reported below may have been fixed by stable updates (see below too). See [http://docs.openmoko.org/trac/search?q=2008.8 all tickets with 2008.8] in the bug tracker.
 
+'''Suspend'''
+
+Builds from the last days of August tend to suspend after 30s no matter what you set in settings. Switching the screensaver off with `xset s off' disables suspend completely.
+
 '''GSM'''
 
 * [http://docs.openmoko.org/trac/ticket/1766 Cannot make calls or receive SMS messages]
