--- a/Reporting_Bugs.mw
+++ b/Reporting_Bugs.mw
@@ -1,5 +1,1 @@
-You can report a bug/defect at https://docs.openmoko.org/trac/.  Just create an account. After email validation of your account, you can log in. You will see a new button labeled "New Ticket".
-
-You can also (of course) search for existing bugs on the bug tracker. In fact, you should do so prior adding new tickets to avoid double reporting the same issue.
-
-[[Category:Openmoko]]
+#redirect [[Bug_Filing_Policy]]
