--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1194,7 +1194,7 @@ Status: 17/20
 ==== Venezia ====
 
 * Tommaso [mailto:tommaso.gardumi@gmail.com tommaso.gardumi@gmail.com] - [[User:Tobarello|Tobarello]] <br />Also Padova, Vicenza & Trento are ok.
-* Mattia  [mailto:tia8219(at)gmail(dot)com tia8219(at)gmail(dot)com] - [[User:tia1982|tia1982]] <br />Also Padova.
+* Mattia  [mailto:tia8219(at)gmail(dot)com tia8219(at)gmail(dot)com] - [[User:tia1982|tia1982]] (Acquistato dal distributore italiano)
 
 ==== Verona ====
 
