/* Running X as normal user */

--- a/Debian.mw
+++ b/Debian.mw
@@ -126,7 +126,7 @@ method is using <code>rungetty</code>
 <pre>
 # apt-get install rungetty
 # cp /usr/bin/zhone-session ~username/.xinitrc
-# chown username.username ~username/.xinitrc
+# chown username. ~username/.xinitrc /tmp/zhone.log
 </pre>
 Then edit <code>/etc/inittab</code> and change
  1:2345:respawn:/sbin/getty 38400 tty1
