Link auf Deutsche Seite geändert (unter FreeRunner-GTA02)

--- a/Main_Page%2Fde.mw
+++ b/Main_Page%2Fde.mw
@@ -86,7 +86,7 @@ Die deutschen Haendler erwarten eine neue Lieferung Mitte September.
 *[[GTA02 Openness]]
 *[[Neo FreeRunner]]
 *[[Neo FreeRunner GTA02 Hardware]]
-*[[Getting Started with your Neo FreeRunner]]
+*[http://wiki.openmoko.org/wiki/Getting_Started_with_your_Neo_FreeRunner/de Wie ich meinen NeoFreerunner Starte]
 *[[Prototypes]]
 
 <font color=white> ※</font>[[: Category: GTA02 Hardware |  See More About GTA02....]]
