/* Testing unstable: Om "base / empty" images */

--- a/Download.mw
+++ b/Download.mw
@@ -32,7 +32,7 @@ http://downloads.openmoko.org/repository/Om2008.8/om-gta02/
 
 Reference: See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
 
-=== Testing unstable: Om "base / empty" images ===
+=== Testing the Om "base / empty" images ===
 
 The ''org.openmoko.dev'' branch does not have any applications preinstalled other than settings and installer, and it is really unstable for now.
 
