--- a/Download.mw
+++ b/Download.mw
@@ -14,10 +14,10 @@ If you want to install a system to a microSD card, see [[Booting from SD]].
 
 === Om 2008.8 images (ASU) ===
 
-These images are based on the branch ''org.openmoko.asu.stable''. They are the ASU distribution. Sorry, there are no build for the Neo 1973 yet, only the FreeRunner.
+These images are based on the branch ''org.openmoko.asu.stable''. They are the ASU distribution. Sorry, there are no build for the Neo 1973 yet, only the FreeRunner. While the branch name ends with ''.stable'', repositories are updated daily. In an ideal world there would never be any regressions and the quality of builds would improve every day. We are not in an ideal world.
 The content of these images is presented at: {{Main|Om 2008.8}}
 
-The current head, which is updated daily, is at:
+To flash from scratch, download the current image from:
 http://downloads.openmoko.org/releases/Om2008.8-update/
 * Root FS images are like: Om2008.8-gta02-YYYYMMDD.rootfs.jffs2
 * Kernel images are like:  Om2008.8-gta02-YYYYMMDD.uImage.bin
