--- a/Download.mw
+++ b/Download.mw
@@ -55,38 +55,29 @@ Reference: See [http://lists.openmoko.org/pipermail/community/2008-August/027997
 === Om 2007.2 images (GTK) ===
 {{Main|Om 2007.2}}
 
-==== Neo FreeRunner ====
+==== Community repositories ====
 
-Latest stable Om 2007.2 release:
-http://buildhost.openmoko.org/releases/FreeRunner/
-
-Daily builds: http://buildhost.openmoko.org/daily/freerunner/ 
-
-* Root FS files are like: Openmoko-'''openmoko-devel-image'''-glibc-ipk-P1-Snapshot-20080804-'''om-gta02.rootfs.jffs2'''
-* Kernel files are like:  '''uImage'''-2.6.24+git27+1a95efdc23966343a3b432ceef2f6c24dc0e2052-r2-'''om-gta02.bin'''
-
-==== Neo 1973 ====
-
-Daily builds: http://buildhost.openmoko.org/daily/neo1973/ 
-
-* Root FS files are like: Openmoko-'''openmoko-devel-image'''-glibc-ipk-P1-Snapshot-20080802-'''om-gta01.rootfs.jffs2'''
-* Kernel files are like: '''uImage'''-2.6.24+git27+1a95efdc23966343a3b432ceef2f6c24dc0e2052-r2-'''om-gta01.bin'''
-
-==== Celtune images ====
-
-* Celtune offers different Images and a huge amount of packages (2007.2, pyneo, fso) for neo1973, freerunner and others.
+Celtune offers different Images and a huge amount of packages (2007.2, pyneo, fso) for neo1973, freerunner and others.
 * Celtune images can be found at http://rabenfrost.net/celtune/
 
-==== ScaredyCat images ====
+[http://blog.automated.it/category/openmoko/ Andy Powell] are maintains images based on the 2007.2 software stack for the gta01 and gta02.
+* A. Powell's ScaredyCat images can be found at: http://buildhost.automated.it/OM2007.2/
 
-These are usable images created by [http://blog.automated.it/category/openmoko/ Andy Powell] based on the 2007.2 software stack.
+==== Discontinued support ====
 
-ScaredyCat images: http://buildhost.automated.it/OM2007.2/
+Openmoko discontinued support for this release. The host that used to distribute it has been taken offline at the end of August 2008.
+The stable Om 2007.2 release for the Neo FreeRunner used to be at:
+http://buildhost.openmoko.org/releases/FreeRunner/
 
-For Neo FreeRunner images please scroll down on that link.
+The daily builds were at: http://buildhost.openmoko.org/daily/freerunner/ 
 
+* Root FS files were like: Openmoko-'''openmoko-devel-image'''-glibc-ipk-P1-Snapshot-20080804-'''om-gta02.rootfs.jffs2'''
+* Kernel files were like:  '''uImage'''-2.6.24+git27+1a95efdc23966343a3b432ceef2f6c24dc0e2052-r2-'''om-gta02.bin'''
 
+For the Neo 1973, daily builds were at: http://buildhost.openmoko.org/daily/neo1973/ 
 
+* Root FS files were like: Openmoko-'''openmoko-devel-image'''-glibc-ipk-P1-Snapshot-20080802-'''om-gta01.rootfs.jffs2'''
+* Kernel files were like: '''uImage'''-2.6.24+git27+1a95efdc23966343a3b432ceef2f6c24dc0e2052-r2-'''om-gta01.bin'''
 
 === FSO images (freesmartphone.org) ===
 {{Main|FSO}}
