/* Add a Repository */ Rewrite and simplify

--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -69,43 +69,23 @@ To display a package through [[Om2008.8_Installer |Installer]], add the appropri
 :For [http://code.google.com/p/comic-reader/source/browse/trunk/data/comic-reader_svn.bb example]:
  PKG_TAGS_${PN} = "group::games"
 
-==== Add a Repository ==== 
-===== Add repositories by installing repository packages =====
-* The community-repository is installed by default in [[Om2008.8 | Om 2008.8]].
+=== How to add a Repository ? ===
 
-===== Add repository manually =====
-* Create a file, here we call it community-repos.conf
- > echo "arch community-repos 50" > community-repos.conf
- > echo "src community-repos http://downloads.openmoko.org/repository/Multiverse/" >> community-repos.conf
-* Connect to your Neo with USB
- > sudo ifconfig usb0 192.168.0.200
- > scp community-repos.conf root@192.168.0.202:/etc/opkg/
-* Let your Neo connect to the Internet
-** For USB users:
- > echo 1 | sudo tee  /proc/sys/net/ipv4/ip_forward
- > sudo iptables -t nat -A POSTROUTING -s 192.168.0.0/24 -j MASQUERADE
- > scp /etc/resolv.conf root@192.168.0.202:/etc/
-** For geek users:
- > ssh root@192.168.0.202
- > iwlist eth0 scan
- Find a usable AP lets say OpenMind (Support it's an open AP)
- > iwconfig eth0 essid OpenMind
- > udhcpc eth0
- Then pray, if successfull, remove default gw *twice*.
- > route -n  # to see your gateway of eth0 say 192.168.1.1
- > route del default
- > route del default
- > route add default gw 192.168.1.1 eth0
- Then you can ping wiki.openmoko.org for testing :)
-** For GUI WiFi user:
- Click Settings
- Click WiFi
- Select an AP
- Input password if needed
- 
-* Refresh the opkg metadata database
- after connecting to Neo
- > opkg update
+Adding a repository allows the package manager to install softwares beyond those included in the original distribution. More power, but also more risk of breakage.
+
+If you don't want to add a repository, you can still try to install an application with
+
+ opkg url_to_app.ipk
+
+The community-repository is installed by default in [[Om2008.8 | Om 2008.8]]. If it were not, you could add it by creating a file named 'community-repos.conf'  in the directory '/etc/opkg'  containing this line:
+
+ src community-repos http://downloads.openmoko.org/repository/Multiverse/
+
+Changes made to the list of repositories made in '/etc/opkg' will be taken into account when the list of package is refreshed by:
+
+ opkg update
+
+It seems that repositories could be added by installing a 'repository package'. The status of this functionality is unclear at present. Please edit this paragraph if you have more information.
 
 == Technical Features ==
 * '''Installer''' is a specialized GUI front-end of [http://packagekit.org/ Packagekit] over DBus interface.
