/* Technical Features */ Rewrite to clarify

--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -87,20 +87,20 @@ Changes made to the list of repositories made in '/etc/opkg' will be taken into 
 
 It seems that repositories could be added by installing a 'repository package'. The status of this functionality is unclear at present. Please edit this paragraph if you have more information.
 
-== Technical Features ==
+== Features ==
 * '''Installer''' is a specialized GUI front-end of [http://packagekit.org/ Packagekit] over DBus interface.
 
-* Please run '''Installer''' under stable network conditions and enough power supply.  Once '''Installer''' is launched, it will actually try to detect repositories you installed. This will take some time if your network condition is not stable.
-** If you do not have access to WiFi, a [http://svn.openmoko.org/developers/tick/Test_env_script_GTA02A5/setneo USB] connection is recommended.
-* The default Packagekit backend on Neo is [[opkg]], but is not restricted to opkg. 
+* '''Installer''' should be run with stable network conditions and power supply.  Once '''Installer''' is launched, it actively tries to connect to installed repositories. Timeout will make it unresponsive if the network condition is not stable. If you do not have access to WiFi, a [http://svn.openmoko.org/developers/tick/Test_env_script_GTA02A5/setneo USB] connection is recommended.
 
 * '''Installer''' refreshes the package meta-data every 2 days.
 
-* While running '''Installer''', it will also launch packagekitd automatically, in which it will lock the libopkg for synchronization issues.  If you want to use opkg, you may terminate '''Installer''' and killall packagekitd.
+* The default Packagekit backend on Neo is [[opkg]], but it is not restricted to opkg. 
 
 * You can also talk with Packagekit through DBus.
 
-For more information, refer to the reference section below.
+* '''Installer''' will launch packagekitd automatically, which will lock the libopkg to avoid synchronization trouble.  Normally, the packagekitd terminates itself after about 5 minutes. If you want to use 'opkg', you may terminate '''Installer''' and:
+
+ killall packagekitd
 
 == Reference ==
 [1] Installer project - http://code.google.com/p/om-assassin/
