--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -69,7 +69,7 @@ To display a package through [[Om2008.8_Installer |Installer]], add the appropri
 :For [http://code.google.com/p/comic-reader/source/browse/trunk/data/comic-reader_svn.bb example]:
  PKG_TAGS_${PN} = "group::games"
 
-=== How to add a Repository ? ===
+== How to add a Repository ? ==
 
 Adding a repository allows the package manager to install softwares beyond those included in the original distribution. More power, but also more risk of breakage.
 
