/* How to release packages */ Paste section from the Installer page

--- a/Community_Repository.mw
+++ b/Community_Repository.mw
@@ -7,12 +7,44 @@ The Repository: http://downloads.openmoko.org/repository/Multiverse
 The mailing list: http://lists.openmoko.org/mailman/listinfo/community-repository
 
 = How to release packages = 
+
+Sharing applications is done by uploading packages to the [http://downloads.openmoko.org/repository/Multiverse/ Community Repository], which is a similar concept to the Multiverse repository in Ubuntu.  [[CommunityRepository|Anyone can upload applications]] or even their own repository to share with fellow Neo owners. 
 You can release your package with ipk file. 
 
 * [[Create package on projects.openmoko.org and upload]]
 * how to create ipk files
 ** Using OE
 ** [[Toolchain|Meta-toolchain]]
+
+
+===How to add a package to Openmoko Repository===
+
+
+==== Package Tags ====
+Packages in '''Installer''' are displayed according to '''Package Tags'''.
+To display a package through [[Om2008.8_Installer |Installer]], add the appropriate tag message. 
+{| class="wikitable" border:1px ;
+! Category !! Tag 
+|- 
+| Communication || group::communication 
+|-
+| Development   || group::programming
+|-
+| Games         || group::games
+|-
+| Maps          || group::maps
+|-
+| Miscellaneous || group::unknown
+|-
+| Network       || group::network
+|-
+|Repos          || group::repos
+|}
+
+
+* For OpenEmbedded users, add a Tag by adding one line in your bb file
+:For [http://code.google.com/p/comic-reader/source/browse/trunk/data/comic-reader_svn.bb example]:
+ PKG_TAGS_${PN} = "group::games"
 
 = How to create your own repository =
 TBD
